[WNMGDS-2094] Fix centered containers shifting left when dialog opens (#2268)
Fix centered containers shifting to the left when dialog opens

--- a/packages/design-system/src/styles/components/_Dialog.scss
+++ b/packages/design-system/src/styles/components/_Dialog.scss
@@ -126,3 +126,10 @@ dialog.fixed {
     padding: $spacer-half $spacer-2;
   }
 }
+
+.ds--dialog-open {
+  left: 0;
+  position: fixed;
+  right: 0;
+  top: var(--body_top--dialog-open, 0);
+}
